// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` empty response to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="response"
  >
    <div
      class="inline"
    >
      <div
        class="half"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[` response without customer to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="response"
  >
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <h2>
          Заказ
        </h2>
        <div
          class="customer"
        >
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="name"
              >
                mindboxId: 1968413179
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Статус обработки
              </div>
              <div
                class="value"
              >
                Рассчитан
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="value"
              >
                Доставка
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="value"
              >
                20638572.96
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="value"
              >
                Итоговая цена
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="value"
              >
                10542306.11
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="half"
      >
        <div>
          <h2>
            Линии
          </h2>
          <div>
            <div
              class="customer"
            >
              <div
                class="inline"
              >
                <div
                  class="third"
                >
                  <div
                    class="status neutral"
                  >
                    <div>
                      № линии: 1
                    </div>
                    <div>
                      ID линии: 8
                    </div>
                  </div>
                </div>
                <div
                  class="third"
                >
                  <div
                    class="name"
                  >
                    Ид продукта
                  </div>
                  <div>
                     798199676
                  </div>
                </div>
                <div
                  class="third"
                >
                  <div
                    class="name"
                  >
                    Количество
                  </div>
                  <div>
                     13179398.15
                  </div>
                </div>
              </div>
              <div
                class="inline"
              >
                <div
                  class="half"
                >
                  <div
                    class="value"
                  >
                    До скидки
                  </div>
                  <div
                    class="promoValue"
                  >
                    17639978.17
                  </div>
                </div>
                <div
                  class="half"
                >
                  <div
                    class="value"
                  >
                    Итого
                  </div>
                  <div
                    class="promoValue"
                  >
                    804584.3
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="customer"
            >
              <div
                class="inline"
              >
                <div
                  class="third"
                >
                  <div
                    class="status neutral"
                  >
                    <div>
                      № линии: 1
                    </div>
                    <div>
                      ID линии: 6
                    </div>
                  </div>
                </div>
                <div
                  class="third"
                >
                  <div
                    class="name"
                  >
                    Ид продукта
                  </div>
                  <div>
                     1963295047
                  </div>
                </div>
                <div
                  class="third"
                >
                  <div
                    class="name"
                  >
                    Количество
                  </div>
                  <div>
                     20422921.01
                  </div>
                </div>
              </div>
              <div
                class="inline"
              >
                <div
                  class="half"
                >
                  <div
                    class="value"
                  >
                    До скидки
                  </div>
                  <div
                    class="promoValue"
                  >
                    16956137.47
                  </div>
                </div>
                <div
                  class="half"
                >
                  <div
                    class="value"
                  >
                    Итого
                  </div>
                  <div
                    class="promoValue"
                  >
                    9906634.11
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[` response without lines to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="response"
  >
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <h2>
          Клиент
        </h2>
        <div
          class="customer"
        >
          <div
            class="line"
          >
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  ФИО
                </div>
                <div
                  class="value"
                >
                  Иван Иванович Иванов
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Статус обработки
                </div>
                <div
                  class="value"
                >
                  Processed
                </div>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Пол
                </div>
                <div
                  class="value"
                >
                  Женский
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Дата рождения
                </div>
                <div
                  class="value"
                >
                  1990-01-31
                </div>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="name"
            >
              Мобильный телефон
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  79001234567
                </div>
                <p
                  class="good status"
                >
                  Валидный 
                </p>
                <p
                  class="good status"
                >
                  Подтвержден 
                </p>
              </div>
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  79652026149
                </div>
                <p
                  class="bad status"
                >
                  Ожидает подтверждения 
                </p>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="name"
            >
              Email
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  test@mindbox.ru
                </div>
                <p
                  class="good status"
                >
                  Валидный 
                </p>
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="name"
              >
                Зона
              </div>
              <div
                class="value"
              >
                Москва
              </div>
              <p
                class="neutral status"
              >
                MoscowCity
              </p>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Часовой пояс
              </div>
              <div
                class="value"
              >
                Asia/Hong_Kong
              </div>
              <p
                class="neutral status"
              >
                Определили в трекере
              </p>
            </div>
          </div>
        </div>
        <h2>
          Заказ
        </h2>
        <div
          class="customer"
        >
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="name"
              >
                mindboxId: 1968413179
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Статус обработки
              </div>
              <div
                class="value"
              >
                Рассчитан
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="value"
              >
                Доставка
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="value"
              >
                20638572.96
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="value"
              >
                Итоговая цена
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="value"
              >
                10542306.11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[` response without order to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="response"
  >
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <h2>
          Клиент
        </h2>
        <div
          class="customer"
        >
          <div
            class="line"
          >
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  ФИО
                </div>
                <div
                  class="value"
                >
                  Иван Иванович Иванов
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Статус обработки
                </div>
                <div
                  class="value"
                >
                  Processed
                </div>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Пол
                </div>
                <div
                  class="value"
                >
                  Женский
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Дата рождения
                </div>
                <div
                  class="value"
                >
                  1990-01-31
                </div>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="name"
            >
              Мобильный телефон
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  79001234567
                </div>
                <p
                  class="good status"
                >
                  Валидный 
                </p>
                <p
                  class="good status"
                >
                  Подтвержден 
                </p>
              </div>
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  79652026149
                </div>
                <p
                  class="bad status"
                >
                  Ожидает подтверждения 
                </p>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="name"
            >
              Email
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  test@mindbox.ru
                </div>
                <p
                  class="good status"
                >
                  Валидный 
                </p>
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="name"
              >
                Зона
              </div>
              <div
                class="value"
              >
                Москва
              </div>
              <p
                class="neutral status"
              >
                MoscowCity
              </p>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Часовой пояс
              </div>
              <div
                class="value"
              >
                Asia/Hong_Kong
              </div>
              <p
                class="neutral status"
              >
                Определили в трекере
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`full response to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="response"
  >
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <h2>
          Клиент
        </h2>
        <div
          class="customer"
        >
          <div
            class="line"
          >
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  ФИО
                </div>
                <div
                  class="value"
                >
                  Иван Иванович Иванов
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Статус обработки
                </div>
                <div
                  class="value"
                >
                  Processed
                </div>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Пол
                </div>
                <div
                  class="value"
                >
                  Женский
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Дата рождения
                </div>
                <div
                  class="value"
                >
                  1990-01-31
                </div>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="name"
            >
              Мобильный телефон
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  79001234567
                </div>
                <p
                  class="good status"
                >
                  Валидный 
                </p>
                <p
                  class="good status"
                >
                  Подтвержден 
                </p>
              </div>
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  79652026149
                </div>
                <p
                  class="bad status"
                >
                  Ожидает подтверждения 
                </p>
              </div>
            </div>
          </div>
          <div
            class="line"
          >
            <div
              class="name"
            >
              Email
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  test@mindbox.ru
                </div>
                <p
                  class="good status"
                >
                  Валидный 
                </p>
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="name"
              >
                Зона
              </div>
              <div
                class="value"
              >
                Москва
              </div>
              <p
                class="neutral status"
              >
                MoscowCity
              </p>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Часовой пояс
              </div>
              <div
                class="value"
              >
                Asia/Hong_Kong
              </div>
              <p
                class="neutral status"
              >
                Определили в трекере
              </p>
            </div>
          </div>
          <div>
            <div
              class="name"
            >
              Дополнительные поля
              <button
                class="small button normal basic"
              >
                <div>
                  <svg
                    fill="none"
                    height="5"
                    viewBox="0 0 8 5"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
                      fill="#000"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <h2>
          Заказ
        </h2>
        <div
          class="customer"
        >
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="name"
              >
                mindboxId: 1968413179
              </div>
              <div
                class="name"
              >
                orderId2Id: 1784802773
              </div>
              <div
                class="name"
              >
                orderMobileAppIdId: 1288953047
              </div>
              <div
                class="name"
              >
                offlineTransactionIdId: 1430164306
              </div>
              <div
                class="name"
              >
                websiteTransactionIdId: 2035457217
              </div>
              <div
                class="name"
              >
                receiptNumberId: 107913866
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Статус обработки
              </div>
              <div
                class="value"
              >
                Рассчитан
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="value"
              >
                Доставка
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="value"
              >
                20638572.96
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="value"
              >
                Итоговая цена
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="value"
              >
                10542306.11
              </div>
            </div>
          </div>
          <div>
            <div
              class="name"
            >
              Дополнительные поля
              <button
                class="small button normal basic"
              >
                <div>
                  <svg
                    fill="none"
                    height="5"
                    viewBox="0 0 8 5"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
                      fill="#000"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div>
          <div
            class="promo"
          >
            <div
              class="promoType"
            >
              Начисление баллов
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                   Новая акция
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Примененный промокод
                  </div>
                  <div
                    class="value"
                  >
                    ABC12345
                  </div>
                  <div
                    class="status neutral"
                  >
                    Из пула: Новый пул промокодов
                  </div>
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Балльный счет
                  </div>
                  <div
                    class="value"
                  >
                    tmtk1GOB
                  </div>
                  <div
                    class="status neutral"
                  >
                    Сис имя: ojbLVRsD
                  </div>
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Сумма
                </div>
                <div
                  class="promoValue"
                >
                  1180401.2
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    До
                  </div>
                  <div
                    class="value"
                  >
                    Tue Feb 14 2017
                  </div>
                </div>
              </div>
            </div>
            <div
              class="line"
            >
              <span
                class="promoDetail"
              >
                1043337289
              </span>
              <span
                class="promoDetail"
              >
                promotion-1
              </span>
              <span
                class="promoDetail"
              >
                mindbox
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="promo"
          >
            <div
              class="promoType"
            >
              Скидка балламми
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                   Новая акция
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Примененный промокод
                  </div>
                  <div
                    class="value"
                  >
                    ABC12345
                  </div>
                  <div
                    class="status neutral"
                  >
                    Из пула: Новый пул промокодов
                  </div>
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Балльный счет
                  </div>
                  <div
                    class="value"
                  >
                    iLqkYKaK
                  </div>
                  <div
                    class="status neutral"
                  >
                    Сис имя: 8r6qx418
                  </div>
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Сумма
                </div>
                <div
                  class="promoValue"
                >
                  16327420.01
                </div>
              </div>
            </div>
            <div
              class="line"
            >
              <span
                class="promoDetail"
              >
                880694824
              </span>
              <span
                class="promoDetail"
              >
                promotion-1
              </span>
              <span
                class="promoDetail"
              >
                mindbox
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="promo"
          >
            <div
              class="promoType"
            >
              Скидка
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                   Новая акция
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Примененный промокод
                  </div>
                  <div
                    class="value"
                  >
                    ABC12345
                  </div>
                  <div
                    class="status neutral"
                  >
                    Из пула: Новый пул промокодов
                  </div>
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Сумма
                </div>
                <div
                  class="promoValue"
                >
                  6929359.6
                </div>
              </div>
            </div>
            <div
              class="line"
            >
              <span
                class="promoDetail"
              >
                118506896
              </span>
              <span
                class="promoDetail"
              >
                promotion-1
              </span>
              <span
                class="promoDetail"
              >
                mindbox
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="promo"
          >
            <div
              class="promoType"
            >
              Скидка на доставку
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                   Новая акция
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Примененный промокод
                  </div>
                  <div
                    class="value"
                  >
                    ABC12345
                  </div>
                  <div
                    class="status neutral"
                  >
                    Из пула: Новый пул промокодов
                  </div>
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Сумма
                </div>
                <div
                  class="promoValue"
                >
                  6653645.27
                </div>
              </div>
            </div>
            <div
              class="line"
            >
              <span
                class="promoDetail"
              >
                1497291562
              </span>
              <span
                class="promoDetail"
              >
                promotion-1
              </span>
              <span
                class="promoDetail"
              >
                mindbox
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="promo"
          >
            <div
              class="promoType"
            >
              Сообщение
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                   Новая акция
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Примененный промокод
                  </div>
                  <div
                    class="value"
                  >
                    ABC12345
                  </div>
                  <div
                    class="status neutral"
                  >
                    Из пула: Новый пул промокодов
                  </div>
                </div>
              </div>
            </div>
            <div
              class="line"
            >
              <span
                class="promoDetail"
              >
                1976033026
              </span>
              <span
                class="promoDetail"
              >
                promotion-1
              </span>
              <span
                class="promoDetail"
              >
                mindbox
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="promo"
          >
            <div
              class="promoType"
            >
              Выданный промокод
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                   Новая акция
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Примененный промокод
                  </div>
                  <div
                    class="value"
                  >
                    ABC12345
                  </div>
                  <div
                    class="status neutral"
                  >
                    Из пула: Новый пул промокодов
                  </div>
                </div>
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Выданный промокод
                  </div>
                  <div
                    class="value"
                  >
                    ABC12345
                  </div>
                  <div
                    class="status neutral"
                  >
                    Из пула:Новый пул промокодов
                  </div>
                </div>
              </div>
            </div>
            <div
              class="line"
            >
              <span
                class="promoDetail"
              >
                11133877
              </span>
              <span
                class="promoDetail"
              >
                promotion-1
              </span>
              <span
                class="promoDetail"
              >
                mindbox
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="promo"
          >
            <div
              class="promoType"
            >
              Скидка
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="value"
                >
                   Новая акция
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Сумма
                </div>
                <div
                  class="promoValue"
                >
                  17853107.91
                </div>
              </div>
            </div>
            <div
              class="line"
            >
              <span
                class="promoDetail"
              >
                58219796
              </span>
              <span
                class="promoDetail"
              >
                promotion-1
              </span>
              <span
                class="promoDetail"
              >
                mindbox
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="promo"
          >
            <div
              class="promoType"
            >
              Скидка
            </div>
            <div
              class="inline"
            >
              <div
                class="half"
              >
                <div
                  class="line"
                >
                  <div
                    class="name"
                  >
                    Примененный промокод
                  </div>
                  <div
                    class="value"
                  >
                    ABC12345
                  </div>
                  <div
                    class="status neutral"
                  >
                    Из пула: Новый пул промокодов
                  </div>
                </div>
              </div>
              <div
                class="half"
              >
                <div
                  class="name"
                >
                  Сумма
                </div>
                <div
                  class="promoValue"
                >
                  17074535.58
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="customer"
        >
          <div
            class="promoType"
          >
            Промокод
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="line"
              >
                <div
                  class="value"
                >
                  ABC12345
                </div>
              </div>
              <div
                class="line"
              >
                Пока еще не активен
              </div>
              <div
                class="line"
              >
                <div
                  class="name"
                >
                  Сумма скидки
                </div>
                <div
                  class="promoValue"
                >
                  10528369.9
                </div>
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="line"
              >
                <div
                  class=" name"
                >
                  Выдан
                </div>
                <div
                  class="  value"
                >
                  Tue Oct 23 2018
                </div>
              </div>
              <div
                class="line"
              >
                <div
                  class="  name"
                >
                  Сгорит
                </div>
                <div
                  class="  value"
                >
                  Tue Nov 21 2017
                </div>
              </div>
              <div
                class="line"
              >
                <div
                  class=" name"
                >
                  Использован
                </div>
                <div
                  class="  value"
                >
                  Sat Apr 20 2019
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="customer"
        >
          <div
            class="promoType"
          >
            Промокод
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="line"
              >
                <div
                  class="value"
                >
                  ABC12345
                </div>
              </div>
              <div
                class="line"
              >
                Нельзя применить на этот заказ
              </div>
              <div
                class="line"
              >
                <div
                  class="name"
                >
                  Сумма скидки
                </div>
                <div
                  class="promoValue"
                >
                  6533321.56
                </div>
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="line"
              >
                <div
                  class=" name"
                >
                  Выдан
                </div>
                <div
                  class="  value"
                >
                  Fri Sep 27 2019
                </div>
              </div>
              <div
                class="line"
              >
                <div
                  class="  name"
                >
                  Сгорит
                </div>
                <div
                  class="  value"
                >
                  Fri Sep 15 2017
                </div>
              </div>
              <div
                class="line"
              >
                <div
                  class=" name"
                >
                  Использован
                </div>
                <div
                  class="  value"
                >
                  Fri Feb 16 2018
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="customer"
        >
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="promoType"
              >
                Информация о баллах
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Статус обработки
              </div>
              <div
                class="value"
              >
                Успешно
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="name"
              >
                Доступно для списание
              </div>
              <div
                class="promoValue"
              >
                8295431.24
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Будет списано
              </div>
              <div
                class="half"
              >
                <div
                  class="promoValue"
                >
                  1559295.84
                </div>
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="name"
            >
              Баланс
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Доступно
              </div>
              <div
                class="value"
              >
                2202060.23
              </div>
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Блок
              </div>
              <div
                class="value"
              >
                19474460.28
              </div>
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Всего
              </div>
              <div
                class="value"
              >
                16594789.28
              </div>
            </div>
          </div>
        </div>
        <div
          class="customer"
        >
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="promoType"
              >
                Информация о баллах
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Статус обработки
              </div>
              <div
                class="value"
              >
                Успешно
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="name"
              >
                Доступно для списание
              </div>
              <div
                class="promoValue"
              >
                15417181.89
              </div>
            </div>
            <div
              class="half"
            >
              <div
                class="name"
              >
                Будет списано
              </div>
              <div
                class="half"
              >
                <div
                  class="promoValue"
                >
                  20423028.05
                </div>
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="name"
            >
              Баланс
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Доступно
              </div>
              <div
                class="value"
              >
                8865936.3
              </div>
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Блок
              </div>
              <div
                class="value"
              >
                19197363.33
              </div>
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Всего
              </div>
              <div
                class="value"
              >
                15632017.52
              </div>
            </div>
          </div>
        </div>
        <div
          class="customer"
        >
          <div
            class="inline"
          >
            <div
              class="half"
            >
              <div
                class="promoType"
              >
                Изменения баллов
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="third"
            >
              <div
                class="name"
              >
                Балльный счет
              </div>
              <div
                class="value"
              >
                P02zXwLm
              </div>
              <div
                class="status neutral"
              >
                MBcRZtuf
              </div>
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Начислено
              </div>
              <div
                class="value"
              >
                1396638.62
              </div>
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Списано
              </div>
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  5761799.72
                </div>
              </div>
            </div>
          </div>
          <div
            class="inline"
          >
            <div
              class="third"
            >
              <div
                class="name"
              >
                Балльный счет
              </div>
              <div
                class="value"
              >
                LE0pZEmG
              </div>
              <div
                class="status neutral"
              >
                REDNhFOU
              </div>
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Начислено
              </div>
              <div
                class="value"
              >
                20955125.72
              </div>
            </div>
            <div
              class="third"
            >
              <div
                class="name"
              >
                Списано
              </div>
              <div
                class="half"
              >
                <div
                  class="value"
                >
                  10868072.91
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="half"
      >
        <div>
          <h2>
            Линии
          </h2>
          <div>
            <div
              class="customer"
            >
              <div
                class="inline"
              >
                <div
                  class="third"
                >
                  <div
                    class="status neutral"
                  >
                    <div>
                      № линии: 1
                    </div>
                    <div>
                      ID линии: 8
                    </div>
                  </div>
                </div>
                <div
                  class="third"
                >
                  <div
                    class="name"
                  >
                    Ид продукта
                  </div>
                  <div>
                     474177964
                  </div>
                </div>
                <div
                  class="third"
                >
                  <div
                    class="name"
                  >
                    Количество
                  </div>
                  <div>
                     13179398.15
                  </div>
                </div>
              </div>
              <div
                class="inline"
              >
                <div
                  class="half"
                >
                  <div
                    class="value"
                  >
                    До скидки
                  </div>
                  <div
                    class="promoValue"
                  >
                    17639978.17
                  </div>
                </div>
                <div
                  class="half"
                >
                  <div
                    class="value"
                  >
                    Итого
                  </div>
                  <div
                    class="promoValue"
                  >
                    804584.3
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Начисление баллов
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Балльный счет
                      </div>
                      <div
                        class="value"
                      >
                        aa1HemNi
                      </div>
                      <div
                        class="status neutral"
                      >
                        Сис имя: nCE33ILt
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      10465118.7
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        До
                      </div>
                      <div
                        class="value"
                      >
                        Sun Sep 15 2019
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    181652215
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка балламми
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Балльный счет
                      </div>
                      <div
                        class="value"
                      >
                        dhVKsVFD
                      </div>
                      <div
                        class="status neutral"
                      >
                        Сис имя: Dc5EuQOG
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      15785603.89
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    355187063
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      15872309.02
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    1761263450
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка на доставку
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      4987163.88
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    361022015
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Сообщение
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    1991884686
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Выданный промокод
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Выданный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула:Новый пул промокодов
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    1303715822
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      2714279.45
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    1507016125
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      20439998.48
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="customer"
            >
              <div
                class="inline"
              >
                <div
                  class="third"
                >
                  <div
                    class="status neutral"
                  >
                    <div>
                      № линии: 1
                    </div>
                    <div>
                      ID линии: 6
                    </div>
                  </div>
                </div>
                <div
                  class="third"
                >
                  <div
                    class="name"
                  >
                    Ид продукта
                  </div>
                  <div>
                     1992290890
                  </div>
                </div>
                <div
                  class="third"
                >
                  <div
                    class="name"
                  >
                    Количество
                  </div>
                  <div>
                     20422921.01
                  </div>
                </div>
              </div>
              <div
                class="inline"
              >
                <div
                  class="half"
                >
                  <div
                    class="value"
                  >
                    До скидки
                  </div>
                  <div
                    class="promoValue"
                  >
                    16956137.47
                  </div>
                </div>
                <div
                  class="half"
                >
                  <div
                    class="value"
                  >
                    Итого
                  </div>
                  <div
                    class="promoValue"
                  >
                    9906634.11
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Начисление баллов
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Балльный счет
                      </div>
                      <div
                        class="value"
                      >
                        qC0qUSpY
                      </div>
                      <div
                        class="status neutral"
                      >
                        Сис имя: j8NVBMXK
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      4390646.74
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        До
                      </div>
                      <div
                        class="value"
                      >
                        Sun Nov 17 2019
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    734177952
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка балламми
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Балльный счет
                      </div>
                      <div
                        class="value"
                      >
                        TBmp3RKg
                      </div>
                      <div
                        class="status neutral"
                      >
                        Сис имя: Hm9fmjz7
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      6967802.04
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    724652849
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      21098663.17
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    445735010
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка на доставку
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      6272434.97
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    1531238233
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Сообщение
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    156935465
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Выданный промокод
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Выданный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула:Новый пул промокодов
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    1368258995
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="value"
                    >
                       Новая акция
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      16032274.27
                    </div>
                  </div>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="promoDetail"
                  >
                    988347201
                  </span>
                  <span
                    class="promoDetail"
                  >
                    promotion-1
                  </span>
                  <span
                    class="promoDetail"
                  >
                    mindbox
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="promo"
              >
                <div
                  class="promoType"
                >
                  Скидка
                </div>
                <div
                  class="inline"
                >
                  <div
                    class="half"
                  >
                    <div
                      class="line"
                    >
                      <div
                        class="name"
                      >
                        Примененный промокод
                      </div>
                      <div
                        class="value"
                      >
                        ABC12345
                      </div>
                      <div
                        class="status neutral"
                      >
                        Из пула: Новый пул промокодов
                      </div>
                    </div>
                  </div>
                  <div
                    class="half"
                  >
                    <div
                      class="name"
                    >
                      Сумма
                    </div>
                    <div
                      class="promoValue"
                    >
                      5200120.47
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
